fixed spacing

--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@ font-family: "Helvetica Neue", "Arial", sans-serif;
 
 p{
   display: flex;
-  margin-left: 20vw;
-  margin-right: 20vw;
+  margin-left: 15vw;
+  margin-right: 15vw;
   margin-top: 10vw;
   margin-bottom: 10vw;
   font-family: "Helvetica Neue", "Arial", sans-serif;
